--- a/rag1.0/requirements.txt
+++ b/rag1.0/requirements.txt
@@ -1,32 +1,54 @@
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.10.0
 attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
+beautifulsoup4==4.13.5
+black==25.9.0
+blinker==1.9.0
 build==1.3.0
 cachetools==5.5.2
 certifi==2025.8.3
 cffi==2.0.0
+chardet==5.2.0
 charset-normalizer==3.4.3
 chromadb==1.0.20
 click==8.2.1
 colorama==0.4.6
 coloredlogs==15.0.1
+coverage==7.10.7
 cryptography==45.0.7
 distro==1.9.0
+docstring_parser==0.17.0
 durationpy==0.10
+et_xmlfile==2.0.0
 faiss-cpu==1.12.0
 fastapi==0.116.1
 filelock==3.19.1
+flake8==7.3.0
 flatbuffers==25.2.10
 fsspec==2025.9.0
+gitdb==4.0.12
+GitPython==3.1.45
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.1
 google-api-python-client==2.181.0
 google-auth==2.40.3
 google-auth-httplib2==0.2.0
+google-cloud-aiplatform==1.115.0
+google-cloud-bigquery==3.38.0
+google-cloud-core==2.4.3
+google-cloud-discoveryengine==0.13.12
+google-cloud-resource-manager==1.14.2
+google-cloud-storage==2.19.0
+google-cloud-vision==3.10.2
+google-crc32c==1.7.1
+google-genai==1.38.0
 google-generativeai==0.8.5
+google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
+grpc-google-iam-v1==0.14.2
 grpcio==1.74.0
 grpcio-status==1.71.2
 h11==0.16.0
@@ -39,6 +61,7 @@ humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
+iniconfig==2.1.0
 jieba==0.42.1
 Jinja2==3.1.6
 jiter==0.10.0
@@ -49,36 +72,56 @@ kubernetes==33.1.0
 lxml==6.0.1
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
+mccabe==0.7.0
 mdurl==0.1.2
 mmh3==5.2.0
 mpmath==1.3.0
+mypy_extensions==1.1.0
+narwhals==2.5.0
 networkx==3.5
-numpy==2.3.2
+numpy==2.2.6
 oauthlib==3.3.1
+ollama==0.5.4
 onnxruntime==1.22.1
 openai==1.107.0
+opencv-python==4.12.0.88
+openpyxl==3.1.5
 opentelemetry-api==1.36.0
 opentelemetry-exporter-otlp-proto-common==1.36.0
 opentelemetry-exporter-otlp-proto-grpc==1.36.0
 opentelemetry-proto==1.36.0
 opentelemetry-sdk==1.36.0
 opentelemetry-semantic-conventions==0.57b0
+opt-einsum==3.3.0
 orjson==3.11.3
 overrides==7.7.0
 packaging==25.0
+paddlepaddle==3.2.0
 pandas==2.3.2
+pathspec==0.12.1
 pdfminer.six==20250506
 pdfplumber==0.11.7
 pillow==11.3.0
+platformdirs==4.4.0
+pluggy==1.6.0
 posthog==5.4.0
+prettytable==3.16.0
 proto-plus==1.26.1
 protobuf==5.29.5
+psutil==7.1.0
+py-cpuinfo==9.0.0
+pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pybase64==1.4.2
+pyclipper==1.3.0.post6
+pycodestyle==2.14.0
 pycparser==2.23
+pycryptodome==3.23.0
 pydantic==2.11.7
 pydantic_core==2.33.2
+pydeck==0.9.1
+pyflakes==3.4.0
 Pygments==2.19.2
 pyparsing==3.2.3
 pypdfium2==4.30.0
@@ -86,42 +129,62 @@ PyPika==0.48.9
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
 pytesseract==0.3.13
+pytest==8.4.2
+pytest-asyncio==1.2.0
+pytest-cov==7.0.0
+pytest-mock==3.15.1
+python-bidi==0.6.6
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
 python-dotenv==1.1.1
+pytokens==0.1.10
 pytz==2025.2
 PyYAML==6.0.2
 rank-bm25==0.2.2
 referencing==0.36.2
 regex==2025.9.1
+reportlab==4.4.3
 requests==2.32.5
 requests-oauthlib==2.0.0
 rich==14.1.0
 rpds-py==0.27.1
 rsa==4.9.1
+ruamel.yaml==0.18.15
+ruamel.yaml.clib==0.2.14
 safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.16.1
 sentence-transformers==5.1.0
+shapely==2.1.1
 shellingham==1.5.4
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
+soupsieve==2.8
 starlette==0.47.3
+streamlit==1.49.1
+striprtf==0.0.29
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
+tifffile==2025.9.20
 tokenizers==0.22.0
+toml==0.10.2
 torch==2.8.0
+tornado==6.5.2
 tqdm==4.67.1
 transformers==4.56.1
 typer==0.17.4
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
+ujson==5.11.0
 uritemplate==4.2.0
 urllib3==2.5.0
 uvicorn==0.35.0
+watchdog==6.0.0
 watchfiles==1.1.0
+wcwidth==0.2.14
 websocket-client==1.8.0
 websockets==15.0.1
 zipp==3.23.0
