--- a/legal_advice_project/package.json
+++ b/legal_advice_project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jspdf": "^3.0.3",
     "multer": "^2.0.2",
