--- a/legal_advice_project/AI/requirements.txt
+++ b/legal_advice_project/AI/requirements.txt
@@ -1,7 +1,7 @@
 fastapi
 uvicorn[standard]
-transformers
-accelerate
-google-cloud-storage
-torch
-safetensors
+google-cloud-aiplatform>=1.26.0
+google-auth
+requests
+python-dotenv
+
