--- a/legal_advice_project/AI/dockerfile
+++ b/legal_advice_project/AI/dockerfile
@@ -1,15 +1,15 @@
-FROM pytorch/pytorch:2.2.0-cuda12.1-cudnn8-runtime
+FROM python:3.11-slim
 
 WORKDIR /app
+
+# Install minimal system deps
+RUN apt-get update && apt-get install -y --no-install-recommends \
+	build-essential \
+	&& rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY predict.py /app/predict.py
-COPY download.py /app/download.py
-COPY entrypoint.sh /app/entrypoint.sh
-
-RUN chmod +x /app/entrypoint.sh
-
 EXPOSE 8080
-CMD ["/app/entrypoint.sh"]
+CMD ["uvicorn", "predict:app", "--host", "0.0.0.0", "--port", "8080"]
