updated front end

--- a/legal_advice_project/package.json
+++ b/legal_advice_project/package.json
@@ -18,6 +18,8 @@
     "pdfjs-dist": "^5.4.394",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
     "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
