--- a/legal_advice_project/AI/dockerfile
+++ b/legal_advice_project/AI/dockerfile
@@ -10,7 +10,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY guide.py .
+COPY agent/ ./agent/
+
 
 EXPOSE 8080
 CMD ["uvicorn", "guide:app", "--host", "0.0.0.0", "--port", "8080"]
