--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -8,9 +8,9 @@
     "default_popup": "popup.html"
   },
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/icon16.svg",
+    "48": "icons/icon48.svg",
+    "128": "icons/icon128.svg"
   },
   "permissions": ["storage", "activeTab", "scripting"],
   "host_permissions": ["http://localhost:5173/*"]
